Source/WebCore: Add HTMLUnknownElement interface as defined in http://www.w3.org/TR/html5/elements.html#elements-in-the-dom. https://bugs.webkit.org/show_bug.cgi?id=41841

Patch by Tom Zakrajsek <tomz@codeaurora.org> on 2011-08-11
Reviewed by Adam Barth.

Test: fast/html/unknown-tag.html

* CMakeLists.txt:
* CodeGenerators.pri:
* DerivedSources.cpp:
* DerivedSources.make:
* GNUmakefile.list.am:
* WebCore.gypi:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:
* bindings/scripts/CodeGeneratorV8.pm:
(IsDOMNodeType):
* dom/make_names.pl:
(defaultParametersHash):
(buildConstructorMap):
(printJSElementIncludes):
(printElementIncludes):
(printWrapperFunctions):
(printWrapperFactoryCppFile):
* html/HTMLTagNames.in:
* html/HTMLUnknownElement.h: Added.
(WebCore::HTMLUnknownElement::create):
(WebCore::HTMLUnknownElement::HTMLUnknownElement):
* html/HTMLUnknownElement.idl: Added.
* mathml/mathtags.in:
* page/DOMWindow.idl:
* svg/svgtags.in:

LayoutTests: Created tests for HTMLUnknownElement interface.
https://bugs.webkit.org/show_bug.cgi?id=41841.

Patch by Tom Zakrajsek <tomz@codeaurora.org> on 2011-08-11
Reviewed by Adam Barth.

* fast/dom/prototype-inheritance-expected.txt:
* fast/html/unknown-tag.html: Added.
* platform/chromium/fast/dom/prototype-inheritance-expected.txt:
* platform/gtk/fast/dom/prototype-inheritance-expected.txt:
* platform/qt/fast/dom/prototype-inheritance-expected.txt:
* platform/win/fast/dom/prototype-inheritance-expected.txt:

Canonical link: https://commits.webkit.org/81955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92890 268f45cc-cd09-0410-ab3c-d52691b4dbfc