Source/WebCore/CodeGenerators.pri
@@ -311,6 +311,7 @@ IDL_BINDINGS += \
     html/HTMLTitleElement.idl \
     html/HTMLTrackElement.idl \
     html/HTMLUListElement.idl \
+    html/HTMLUnknownElement.idl \
     html/HTMLVideoElement.idl \
     html/ImageData.idl \
     html/MediaError.idl \
